<resources>
    <string name="app_name">Hit at Home Timer</string>
    <string name="access_alarm">access to alarm</string>
    <string name="add_alarm">add an alarm</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="copy">copy</string>
    <string name="workouts">Workouts</string>
    <string name="practice">Practice</string>
    <string name="add_workout">Add workout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="creation_sets">Sets : </string>
    <string name="add_a_new_exercise">Add a new exercise</string>
    <string name="add_new_exercise_in_step">New exercise</string>
    <string name="add_new_step_in_session">New set</string>
    <string name="add_a_new_step">Add a new step</string>
    <string name="save_session_in_creation">SAVE</string>
    <string name="start_session_in_practice">start</string>
    <string name="pause_session_in_practice">pause</string>
    <string name="reset_session_in_practice">reset</string>
    <string name="duplicate">duplicate</string>
    <string name="resume_session_in_practice">resume</string>

</resources>