<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.HitatHomeTimer.ui.practice.PracticeFragment"
    app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior">

    <TextView
        android:id="@+id/text_view_practice_countdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="00:00"
        android:textColor="@color/blue_yonder"
        android:textSize="@dimen/countdown_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scroll_view"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_practice_countdown"
        app:layout_constraintBottom_toTopOf="@id/barrier">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_practice_session_name"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                app:cardBackgroundColor="@color/blue_yonder"
                app:cardCornerRadius="@dimen/scale_14dp"
                app:cardElevation="@dimen/scale_10dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_practice_session_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    app:layout_constraintTop_toTopOf="@id/image_button_menu_item_practice"
                    app:layout_constraintBottom_toBottomOf="@id/image_button_menu_item_practice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/ivory"
                    android:textSize="@dimen/title_large_text_size"
                    android:textStyle="bold"
                    tools:text="Training" />

                <ImageButton
                    android:id="@+id/image_button_menu_item_practice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/item_menu_button_margin_end"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:backgroundTint="@color/blue_yonder"
                    android:clickable="true"
                    android:contextClickable="false"
                    android:focusable="true"
                    android:src="@drawable/ic_more_white"
                    app:tint="@color/ivory" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_practice_session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardview_practice_session_name"
                android:layout_centerHorizontal="true"
                tools:listitem="@layout/item_practice_step" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="button_practice_start_session,button_practice_pause_session, button_practice_reset_session,button_practice_resume_session"
        />

    <Button
        android:id="@+id/button_practice_reset_session"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/big_buttons"
        android:elevation="20dp"
        android:shadowColor="@color/dark_blue"
        android:text="@string/reset_session_in_practice"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/large_button_text_size"
        android:visibility="gone"
        app:backgroundTint="@color/khaki_web_bone"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toTopOf="@id/button_practice_resume_session"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_practice_pause_session"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/big_buttons"
        android:elevation="20dp"
        android:shadowColor="@color/dark_blue"
        android:text="@string/pause_session_in_practice"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/large_button_text_size"
        android:visibility="gone"
        app:backgroundTint="@color/khaki_web_bone"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
 />

    <Button
        android:id="@+id/button_practice_resume_session"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/big_buttons"
        android:elevation="20dp"
        android:shadowColor="@color/dark_blue"
        android:text="@string/resume_session_in_practice"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/large_button_text_size"
        android:visibility="gone"
        app:backgroundTint="@color/khaki_web_bone"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/button_practice_start_session"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/big_buttons"
        android:elevation="20dp"
        android:shadowColor="@color/dark_blue"
        android:text="@string/start_session_in_practice"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/large_button_text_size"
        app:backgroundTint="@color/khaki_web_bone"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
      />



</androidx.constraintlayout.widget.ConstraintLayout>