<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context="com.HitatHomeTimer.ui.addeditsession.CreateSessionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_create_session_name"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/independence"
            app:cardBackgroundColor="@color/independence"
            app:cardCornerRadius="@dimen/scale_14dp"
            app:cardElevation="@dimen/scale_10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_creation_step"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_creation_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/item_textview_margin_start"
                    android:text="Title :"
                    android:textColor="@color/khaki_web_bone"
                    android:textSize="@dimen/title_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/text_view_creation_step_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="Workout"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:foregroundGravity="center_horizontal"
                    android:inputType="textAutoComplete"
                    android:singleLine="true"
                    android:textColor="@color/ivory"
                    android:textSize="@dimen/title_text_size"
                    app:layout_constraintStart_toEndOf="@id/text_view_creation_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="Training" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_creation_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/cardview_creation_step"
            app:layout_constraintTop_toBottomOf="@id/cardview_create_session_name"
            tools:listitem="@layout/item_creation_step" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_creation_step"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:overScrollMode="never"
            app:cardBackgroundColor="@color/independence"
            app:cardCornerRadius="@dimen/scale_14dp"
            app:cardElevation="@dimen/scale_10dp"
            app:layout_constraintBottom_toTopOf="@id/button_save_session"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_creation_step">

            <Button
                android:id="@+id/button_creation_add_set"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/add_a_new_step"
                android:drawableLeft="@drawable/ic_add"
                android:drawableTint="@color/ivory"
                android:singleLine="true"
                android:text="@string/add_new_step_in_session" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_save_session"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/big_buttons"
            android:elevation="20dp"
            android:shadowColor="@color/dark_blue"
            android:text="@string/save_session_in_creation"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/large_button_text_size"
            app:backgroundTint="@color/khaki_web_bone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardview_creation_step" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
